<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_location">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="use_current_location"
            app:title="@string/pref_title_current_location" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="use_custom_location"
            app:title="@string/pref_title_use_custom_location" />

        <ListPreference
            app:dependency="use_custom_location"
            android:entryValues="@array/country_values"
            app:entries="@array/country_entries"
            app:key="country"
            app:title="@string/pref_title_country"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="use_custom_location"
            app:key="city_name"
            app:title="@string/pref_title_city_name"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_time">
        <EditTextPreference
            app:key="reminder_time_by_default"
            app:title="@string/pref_title_default_time"
            app:defaultValue="@string/pref_time_reminder_by_default"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_message">
        <EditTextPreference
            app:key="message_for_reminder"
            app:summary="@string/pref_message_by_default_take_umbrella"
            app:title="@string/pref_title_message_for_reminder"
            app:defaultValue="@string/pref_message_by_default_take_umbrella"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>



</PreferenceScreen>


    <!--<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">-->

    <!--<PreferenceCategory app:title="@string/settings">-->

    <!--    <EditTextPreference-->
    <!--        app:key="signature"-->
    <!--        app:summary="City name by default"-->
    <!--        app:title="@string/settings_city_title" />-->

    <!--    <ListPreference-->
    <!--        app:defaultValue="reply"-->
    <!--        app:entries="@array/reply_entries"-->
    <!--        app:entryValues="@array/reply_values"-->
    <!--        app:key="reply"-->
    <!--        app:title="@string/reply_title"-->
    <!--        app:useSimpleSummaryProvider="true" />-->

    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory app:title="@string/sync_header">-->

    <!--    <SwitchPreferenceCompat-->
    <!--        app:key="sync"-->
    <!--        app:title="@string/sync_title" />-->

    <!--    <SwitchPreferenceCompat-->
    <!--        app:dependency="sync"-->
    <!--        app:key="attachment"-->
    <!--        app:summaryOff="@string/attachment_summary_off"-->
    <!--        app:summaryOn="@string/attachment_summary_on"-->
    <!--        app:title="@string/attachment_title" />-->

    <!--</PreferenceCategory>-->

    <!--</PreferenceScreen>-->