<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.current_weather.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/textview_is_network_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/message_internet_is_disconnected"
        android:textColor="@color/red_light"
        android:textSize="@dimen/text_size"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_current_weather_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/city_name"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_is_network_connected" />

    <ImageView
        android:id="@+id/image_icon_current_weather"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/textview_current_weather_temperature"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_current_weather_city"
        android:contentDescription="@string/current_image_weather" />


    <TextView
        android:id="@+id/textview_current_weather_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_degrees_celsius"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/image_icon_current_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_icon_current_weather"
        app:layout_constraintTop_toTopOf="@+id/image_icon_current_weather" />

    <TextView
        android:id="@+id/textview_current_weather_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_wind"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textview_current_weather_precipitation"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/image_icon_current_weather" />

    <TextView
        android:id="@+id/textview_current_weather_precipitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_precipitation"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textview_current_weather_description"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/textview_current_weather_wind" />

    <TextView
        android:id="@+id/textview_current_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/textview_current_weather_precipitation" />

    <ProgressBar
        android:id="@+id/progress_bar_current"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <!--    <EditText-->
    <!--        android:id="@+id/edittext_enter_city"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:autofillHints="City name"-->
    <!--        android:inputType="text"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/button_get_current_weather"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/image_icon_current_weather" />-->

    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        android:id="@+id/button_get_current_weather"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="GET"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@id/edittext_enter_city"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/image_icon_current_weather" />-->

    <!--    <Button-->
    <!--        android:id="@+id/button_list_fragment"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:text="List Second Fragment"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/edittext_enter_city" />-->


</androidx.constraintlayout.widget.ConstraintLayout>